--- a/public/config/theme.css
+++ b/public/config/theme.css
@@ -1,8 +1,8 @@
 :root {
     --primary: #ebc908;
-    --primary-text: #030202;
+    --primary-text: #fafafa;
     --secondary: #ff521d;
-    --secondary-text: #000000;
-    --accent: #fafdc9;
+    --secondary-text: #f5f3f3;
+    --accent: #ad021f;
     --accent-text: #080606;
   }
