--- a/public/config/theme.css
+++ b/public/config/theme.css
@@ -2,7 +2,7 @@
     --primary: #ebc908;
     --primary-text: #fafafa;
     --secondary: #ff521d;
-    --secondary-text: #f5f3f3;
+    --secondary-text: #fafafa;
     --accent: #ad021f;
     --accent-text: #080606;
   }
